@@ -1,5 +1,11 @@
 2008-01-23  Robert Millan  <rmh@aybabtu.com>
 
+	* term/i386/pc/at_keyboard.c (grub_keyboard_isr): #ifdef out
+	grub_dprintf calls, since they make "debug=all" mode unusable.
+	(grub_console_checkkey): Likewise.
+
+2008-01-23  Robert Millan  <rmh@aybabtu.com>
+
 	* conf/i386-ieee1275.rmk (kernel_elf_SOURCES): Add
 	`term/i386/pc/at_keyboard.c'.
 	(pkglib_MODULES): Add `serial.mod'.
